opam-version: "2.0"
depends: [
  "dune" {build}
  "alcotest" {with-test}
  "mirage-fs-lwt"
  "rresult"
  "fpath"
  "fmt"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
maintainer: [
  "Stefanie Schirmer @linse"
]
authors: [
  "Stefanie Schirmer @linse"
  "Hannes Mehnert"
]
homepage: "https://github.com/roburio/mirage-fs-mem"
bug-reports: "https://github.com/roburio/mirage-fs-mem/issues"
dev-repo: "git+https://github.com/roburio/mirage-fs-mem.git"
