opam-version: "2.0"
maintainer: [
  "Stefanie Schirmer @linse"
  "Hannes Mehnert"
]
authors: [
  "Stefanie Schirmer @linse"
  "Hannes Mehnert"
]
homepage: "https://github.com/mirage/mirage-kv-mem"
doc: "https://mirage.github.io/mirage-kv-mem/"
bug-reports: "https://github.com/mirage/mirage-kv-mem/issues"
dev-repo: "git+https://github.com/mirage/mirage-kv-mem.git"
tags: [ "org:mirage" "org:robur" ]
license: "ISC"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.3.0"}
  "alcotest" {with-test}
  "mirage-ptime" {>= "5.0.0"}
  "mirage-kv" {>= "6.0.0"}
  "fmt" {>= "0.9.0"}
  "ptime" {>= "1.1.0"}
  "optint" {>= "0.3.0"}
]
conflicts: [ "result" {< "1.5"} ]

synopsis: "In-memory key value store for MirageOS"
description: """
Implements the mirage-kv interface, but does not provide a persistent data storage.
Use for testing or amnesia.
"""
